REGRESSION: http/tests/resourceLoadStatistics/do-not-capture-statistics-for-simple-top-navigations.html is frequently timing out on iOS EWS bots https://bugs.webkit.org/show_bug.cgi?id=201550

Reviewed by Alex Christensen.

Source/WebCore:

* loader/ResourceLoadObserver.h:
(WebCore::ResourceLoadObserver::hasStatistics const):

Source/WebKit:

* WebProcess/InjectedBundle/API/c/WKBundle.cpp:
(WKBundleResourceLoadStatisticsNotifyObserver):
* WebProcess/InjectedBundle/API/c/WKBundlePrivate.h:

Tools:

Update testRunner.statisticsNotifyObserver() to return a boolean indicating if it did
anything or not.

* WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::statisticsNotifyObserver):
* WebKitTestRunner/InjectedBundle/InjectedBundle.h:
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::statisticsNotifyObserver):
* WebKitTestRunner/InjectedBundle/TestRunner.h:

LayoutTests:

Update test to do checks on a timer if its call to testRunner.statisticsNotifyObserver() is a no-op
due to having no statistics to send to the network process.

* http/tests/resourceLoadStatistics/do-not-capture-statistics-for-simple-top-navigations.html:


Canonical link: https://commits.webkit.org/215275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249702 268f45cc-cd09-0410-ab3c-d52691b4dbfc